2013-02-18  Geoffrey Garen  <ggaren@apple.com>

        Unreviewed, rolling in r143348.
        http://trac.webkit.org/changeset/143348
        https://bugs.webkit.org/show_bug.cgi?id=110242

        The bug was that isEmptyValue() was returning true for the deleted value.
        Fixed this and simplified things further by delegating to m_sourceCode
        for both isNull() and isHashTableDeletedValue(), so they can't be out of
        sync.

        * runtime/CodeCache.cpp:
        (JSC::CodeCache::getFunctionExecutableFromGlobalCode):
        * runtime/CodeCache.h:
        (JSC::SourceCodeKey::SourceCodeKey):
        (JSC::SourceCodeKey::isHashTableDeletedValue):
        (JSC::SourceCodeKey::hash):
        (JSC::SourceCodeKey::length):
        (JSC::SourceCodeKey::isNull):
        (JSC::SourceCodeKey::operator==):
        (SourceCodeKey):

2013-02-15  Martin Robinson  <mrobinson@igalia.com>

        [GTK] Improve gyp build JavaScriptCore code generation
        https://bugs.webkit.org/show_bug.cgi?id=109969

        Reviewed by Dirk Pranke.

        Switch away from using DerivedSources.make when building JavaScriptCore generated
        sources. This bring a couple advantages, such as building the sources in parallel,
        but requires us to list the generated sources more than once.

        * JavaScriptCore.gyp/JavaScriptCoreGTK.gyp: Add rules for generating JavaScriptCore sources.
        * JavaScriptCore.gyp/generate-derived-sources.sh: Added.
        * JavaScriptCore.gyp/redirect-stdout.sh: Added.

2013-02-19  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r143348.
        http://trac.webkit.org/changeset/143348
        https://bugs.webkit.org/show_bug.cgi?id=110242

        "Caused a deleted value sentinel crash on the layout tests"
        (Requested by ggaren on #webkit).

        * runtime/CodeCache.cpp:
        (JSC::CodeCache::getFunctionExecutableFromGlobalCode):
        * runtime/CodeCache.h: